<resources>
    <string name="app_name">Movie Tracker</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="usuario_no_registrado">Usuario no registrado</string>
    <string name="animal_favorito">¿Animal favorito?</string>
    <string name="ciudad_favorita">¿Ciudad favorita?</string>
    <string name="cual_es_el_nombre_de_tu_mejor_amigo">¿Cual es el nombre de tu mejor amigo?</string>
    <string name="tecnolog_a">Tecnología</string>
    <string name="deportes">Deportes</string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="cine">Cine</string>
    <string name="otros">Otros</string>
    <string name="error_campo_vacio">Este campo no puede estar vacío</string>
    <string name="error_formato_mail">Por favor, introduce un correo electrónico válido</string>
    <string name="error_email_registrado">Este email ya esta registrado</string>
    <string name="registro_exitoso">Registrado con éxito!</string>
    <string name="pagina_principal">Ya estás en la página principal</string>
    <string name="error_user_id">Error: No se ha podido obtener el ID del usuario</string>
    <string name="aviso_no_hay_plataformas">No existen plataformas registradas</string>
    <string name="dialogo_eliminar_plataforma">Eliminar Plataforma</string>
    <string name="dialogo_pregunta_confirmacion">¿Estás seguro de que quieres eliminar esta plataforma?</string>
    <string name="error_verificar_user">Error: No se ha podido verificar al usuario. Por favor, inicia sesión de nuevo</string>
    <string name="error_campos_requeridos">Por favor, rellena todos los campos requeridos</string>
    <string name="error_agregar_plataforma">Error al agregar la plataforma</string>
    <string name="opcion_tomar_foto">Tomar foto</string>
    <string name="opcion_galeria">Elegir de galería</string>
    <string name="opcion_cancelar">Cancelar</string>
    <string name="anadir_imagen">Añadir imagen</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="provider">es.umh.dadm.mispelis74381147k.provider</string>
    <string name="error_permiso_camara">Permiso de cámara denegado</string>
    <string name="error_cargar_imagen">Se ha producido un error al cargar la imagen</string>
    <string name="error_actualizar_plataforma">Error al actualizar la plataforma</string>
    <string name="permiso_camara_denegado">Permiso de cámara denegado</string>
    <string name="eliminar_pelicula">Eliminar Película</string>
    <string name="confirmar_eliminar_pelicula">¿Estás seguro de que quieres eliminar esta película?</string>
    <string name="peliculas_de">"Películas de "</string>
    <string name="error_modo_acceso">Error: Modo de acceso no válido</string>
    <string name="error_plataforma_id">Error: No se ha podido obtener el ID de la plataforma</string>
    <string name="error_actualizar_pelicula">Error al actualizar la película</string>
    <string name="platformtostring_plataforma">"Plataforma: "</string>
    <string name="platformtostring_url">", URL: "</string>
    <string name="platformtostring_usuario">", Usuario: "</string>
    <string name="platformtostring_password">", Password: "</string>
    <string name="peliculatostring_pelicula">"Película: "</string>
    <string name="peliculatostring_duracion">", Duración: "</string>
    <string name="peliculatostring_genero">", Género: "</string>
    <string name="peliculatostring_clasificacion">", Calificación: "</string>
    <string name="peliculatostring_plataforma">"/5, Plataforma: "</string>
    <string name="exportar_plataforma_exito">"Datos de plataformas exportados correctamente a "</string>
    <string name="error_exportar_plataformas">"Error al exportar datos de plataformas: "</string>
    <string name="exportar_pelicula_exito">"Datos de películas exportados correctamente a "</string>
    <string name="error_exportar_peliculas">"Error al exportar datos de películas: "</string>
    <string name="error_al_agregar_la_pelicula">Error al agregar la pelicula</string>
    <string name="layout_bienvenido">Bienvenido</string>
    <string name="layout_iniciasesion">Inicia sesión para continuar</string>
    <string name="layout_texto_cuenta">O si no tienes cuenta registrate aqui</string>
    <string name="layout_registro">Registro</string>
    <string name="layout_contrasena">Contraseña</string>
    <string name="layout_nombre">Nombre</string>
    <string name="layout_apellidos">Apellidos</string>
    <string name="layout_doble_factor">Doble Factor</string>
    <string name="layout_pregunta_de_seguridad">Pregunta de seguridad</string>
    <string name="intereses">Intereses</string>
    <string name="cancelar">Cancelar</string>
    <string name="registro">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="bienvenido_a_tu_contenido">Bienvenido a tu contenido</string>
    <string name="selecciona_una_opci_n_para_continuar">Selecciona una opción para continuar</string>
    <string name="plataformas">Plataformas</string>
    <string name="peliculas">Peliculas</string>
    <string name="volver">Volver</string>
    <string name="exportar">Exportar</string>
    <string name="a_adir_plataforma">Añadir Plataforma</string>
    <string name="nombre_de_la_plataforma">Nombre de la Plataforma</string>
    <string name="plataforma">Plataforma</string>
    <string name="url">URL</string>
    <string name="url_com">url.com</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="username">username</string>
    <string name="contrase_a_acceso_a_la_plataforma">Contraseña acceso a la plataforma</string>
    <string name="contrase_a">contraseña</string>
    <string name="a_adir_pel_cula">Añadir Película</string>
    <string name="nombre_de_la_pelicula">Nombre de la Pelicula</string>
    <string name="pelicula">Pelicula</string>
    <string name="duraci_n">Duración</string>
    <string name="duracion_min">Duracion min</string>
    <string name="g_nero">Género</string>
    <string name="calificaci_n">Calificación</string>
    <string name="detalles_de_la_pel_cula">Detalles de la Película</string>
    <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
    <string name="volver_a_pel_culas">Volver a Películas</string>
    <string name="detalles_de_la_plataforma">Detalles de la Plataforma</string>
    <string name="ver_pel_culas">Ver Películas</string>
    <string name="volver_a_plataformas">Volver a Plataformas</string>

</resources>