<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/textViewPeliculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/inicio"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_a_tu_contenido"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textViewNombreyApellidoUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecciona_una_opci_n_para_continuar"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha_icon"/>


            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:onClick="irPlataformas"
                android:text="@string/plataformas"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:onClick="irPeliculas"
                android:text="@string/peliculas" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:layout_above="@id/bottom_navigation"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:background="@color/Menu"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="?attr/colorOnSurface"
        app:itemTextColor="?attr/colorOnSurface"/>

</RelativeLayout>